# Geometry

./: CMakeLists.txt  LICENSE  README.md
include/: geo_utils.hpp  line.hpp  point.hpp
src/: geo_utils.cpp  line.cpp  point.cpp
tutorial/: main.cpp
